crates/ink-rs/cc/ink_ffi.h

// Mirrors the subset of `absl::StatusCode` Ink actually returns. Values are the
// canonical status codes, so they match `absl::StatusCode` one for one.
enum class StatusCode : int32_t {
  kOk = 0,
  kUnknown = 2,
  kInvalidArgument = 3,
  kNotFound = 5,
  kFailedPrecondition = 9,
  kOutOfRange = 11,
  kUnimplemented = 12,
  kInternal = 13,
};
// Writes the message from the most recent failing call on this thread into
// `buffer` as NUL-terminated text, truncating if it does not fit. Returns the
// number of bytes written, excluding the terminator, or 0 if there is no
// message. Passing a null `buffer` or a `capacity` below 1 writes nothing.
int32_t LastErrorMessage(char* buffer, int32_t capacity);
//
// Value types
//

struct Point {
  float x;
  float y;
};
struct Vec2 {
  float x;
  float y;
};
struct Rect {
  float x_min;
  float y_min;
  float x_max;
  float y_max;
};
// Non-premultiplied unless the accompanying `ColorFormat` says otherwise.
struct Rgba {
  float r;
  float g;
  float b;
  float a;
};
enum class ColorSpace : int32_t {
  kSrgb = 0,
  kDisplayP3 = 1,
};
enum class ColorFormat : int32_t {
  kLinear = 0,
  kGammaEncoded = 1,
  kPremultipliedAlpha = 2,
};
enum class ToolType : int32_t {
  kUnknown = 0,
  kMouse = 1,
  kTouch = 2,
  kStylus = 3,
};
// One sampled input event. Mirrors `ink::StrokeInput` with the wrapper types
// flattened to floats: durations in seconds, distances in centimetres, angles
// in radians.
struct StrokeInput {
  ToolType tool_type;
  Point position;
  float elapsed_time_seconds;
  float stroke_unit_length_cm;  // 0 => absent
  float pressure;               // -1 => absent
  float tilt_radians;           // -1 => absent
  float orientation_radians;    // -1 => absent
  float barrel_twist_radians;   // -1 => absent
};
//
// Handles
//
// Each wraps an owning pointer to the corresponding Ink type. They are distinct
// struct types rather than a shared alias so that C++ still type-checks calls,
// and plain one-field structs rather than forward-declared classes so that
// Crubit has a complete type to bind.
//

struct BrushFamilyHandle {
  void* handle;
};
struct BrushHandle {
  void* handle;
};
struct StrokeInputBatchHandle {
  void* handle;
};
struct InProgressStrokeHandle {
  void* handle;
};
struct StrokeHandle {
  void* handle;
};
//
// Stock brush families
//
// `version` selects a versioned stock brush; 0 means "whatever is latest".
// Ink's stock brushes evolve, so pinning a version keeps previously drawn
// strokes looking the way they did when they were drawn.
//

BrushFamilyHandle StockBrushMarker(int32_t version);
BrushFamilyHandle StockBrushPressurePen(int32_t version);
BrushFamilyHandle StockBrushHighlighter(int32_t version);
BrushFamilyHandle StockBrushDashedLine(int32_t version);
BrushFamilyHandle BrushFamilyClone(BrushFamilyHandle family);
void BrushFamilyDestroy(BrushFamilyHandle family);
//
// Brush
//

// `size` and `epsilon` are in stroke units; both must be finite and positive,
// and `epsilon` must not exceed `size`.
StatusCode BrushCreate(BrushFamilyHandle family, Rgba color,
                       ColorSpace color_space, ColorFormat color_format,
                       float size, float epsilon, BrushHandle* out);
BrushHandle BrushClone(BrushHandle brush);
void BrushDestroy(BrushHandle brush);
float BrushSize(BrushHandle brush);
float BrushEpsilon(BrushHandle brush);