crates/ink-rs/src/ffi/generated.rs


#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod root {
    #[allow(unused_imports)]
    use self::super::root;
    pub mod std {
        #[allow(unused_imports)]
        use self::super::super::root;
    }
    pub mod ink_ffi {
        #[allow(unused_imports)]
        use self::super::super::root;
        impl StatusCode {
            pub const kOk: StatusCode = root::ink_ffi::StatusCode(0);
            pub const kUnknown: StatusCode = root::ink_ffi::StatusCode(2);
            pub const kInvalidArgument: StatusCode = root::ink_ffi::StatusCode(3);
            pub const kNotFound: StatusCode = root::ink_ffi::StatusCode(5);
            pub const kFailedPrecondition: StatusCode = root::ink_ffi::StatusCode(9);
            pub const kOutOfRange: StatusCode = root::ink_ffi::StatusCode(11);
            pub const kUnimplemented: StatusCode = root::ink_ffi::StatusCode(12);
            pub const kInternal: StatusCode = root::ink_ffi::StatusCode(13);
        }
        #[repr(transparent)]
        #[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
        pub struct StatusCode(pub i32);
        unsafe extern "C" {
            pub fn LastErrorMessage(buffer: *mut ::std::os::raw::c_char, capacity: i32) -> i32;
        }
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct Point {
            pub x: f32,
            pub y: f32,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of Point"][::std::mem::size_of::<Point>() - 8usize];
            ["Alignment of Point"][::std::mem::align_of::<Point>() - 4usize];
            ["Offset of field: Point::x"][::std::mem::offset_of!(Point, x) - 0usize];
            ["Offset of field: Point::y"][::std::mem::offset_of!(Point, y) - 4usize];
        };
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct Vec2 {
            pub x: f32,
            pub y: f32,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of Vec2"][::std::mem::size_of::<Vec2>() - 8usize];
            ["Alignment of Vec2"][::std::mem::align_of::<Vec2>() - 4usize];
            ["Offset of field: Vec2::x"][::std::mem::offset_of!(Vec2, x) - 0usize];
            ["Offset of field: Vec2::y"][::std::mem::offset_of!(Vec2, y) - 4usize];
        };
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct Rect {
            pub x_min: f32,
            pub y_min: f32,
            pub x_max: f32,
            pub y_max: f32,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of Rect"][::std::mem::size_of::<Rect>() - 16usize];
            ["Alignment of Rect"][::std::mem::align_of::<Rect>() - 4usize];
            ["Offset of field: Rect::x_min"][::std::mem::offset_of!(Rect, x_min) - 0usize];
            ["Offset of field: Rect::y_min"][::std::mem::offset_of!(Rect, y_min) - 4usize];
            ["Offset of field: Rect::x_max"][::std::mem::offset_of!(Rect, x_max) - 8usize];
            ["Offset of field: Rect::y_max"][::std::mem::offset_of!(Rect, y_max) - 12usize];
        };
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct Rgba {
            pub r: f32,
            pub g: f32,
            pub b: f32,
            pub a: f32,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of Rgba"][::std::mem::size_of::<Rgba>() - 16usize];
            ["Alignment of Rgba"][::std::mem::align_of::<Rgba>() - 4usize];
            ["Offset of field: Rgba::r"][::std::mem::offset_of!(Rgba, r) - 0usize];
            ["Offset of field: Rgba::g"][::std::mem::offset_of!(Rgba, g) - 4usize];
            ["Offset of field: Rgba::b"][::std::mem::offset_of!(Rgba, b) - 8usize];
            ["Offset of field: Rgba::a"][::std::mem::offset_of!(Rgba, a) - 12usize];
        };
        impl ColorSpace {
            pub const kSrgb: ColorSpace = root::ink_ffi::ColorSpace(0);
            pub const kDisplayP3: ColorSpace = root::ink_ffi::ColorSpace(1);
        }
        #[repr(transparent)]
        #[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
        pub struct ColorSpace(pub i32);
        impl ColorFormat {
            pub const kLinear: ColorFormat = root::ink_ffi::ColorFormat(0);
            pub const kGammaEncoded: ColorFormat = root::ink_ffi::ColorFormat(1);
            pub const kPremultipliedAlpha: ColorFormat = root::ink_ffi::ColorFormat(2);
        }
        #[repr(transparent)]
        #[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
        pub struct ColorFormat(pub i32);
        impl ToolType {
            pub const kUnknown: ToolType = root::ink_ffi::ToolType(0);
            pub const kMouse: ToolType = root::ink_ffi::ToolType(1);
            pub const kTouch: ToolType = root::ink_ffi::ToolType(2);
            pub const kStylus: ToolType = root::ink_ffi::ToolType(3);
        }
        #[repr(transparent)]
        #[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
        pub struct ToolType(pub i32);
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct StrokeInput {
            pub tool_type: root::ink_ffi::ToolType,
            pub position: root::ink_ffi::Point,
            pub elapsed_time_seconds: f32,
            pub stroke_unit_length_cm: f32,
            pub pressure: f32,
            pub tilt_radians: f32,
            pub orientation_radians: f32,
            pub barrel_twist_radians: f32,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of StrokeInput"][::std::mem::size_of::<StrokeInput>() - 36usize];
            ["Alignment of StrokeInput"][::std::mem::align_of::<StrokeInput>() - 4usize];
            ["Offset of field: StrokeInput::tool_type"]
                [::std::mem::offset_of!(StrokeInput, tool_type) - 0usize];
            ["Offset of field: StrokeInput::position"]
                [::std::mem::offset_of!(StrokeInput, position) - 4usize];
            ["Offset of field: StrokeInput::elapsed_time_seconds"]
                [::std::mem::offset_of!(StrokeInput, elapsed_time_seconds) - 12usize];
            ["Offset of field: StrokeInput::stroke_unit_length_cm"]
                [::std::mem::offset_of!(StrokeInput, stroke_unit_length_cm) - 16usize];
            ["Offset of field: StrokeInput::pressure"]
                [::std::mem::offset_of!(StrokeInput, pressure) - 20usize];
            ["Offset of field: StrokeInput::tilt_radians"]
                [::std::mem::offset_of!(StrokeInput, tilt_radians) - 24usize];
            ["Offset of field: StrokeInput::orientation_radians"]
                [::std::mem::offset_of!(StrokeInput, orientation_radians) - 28usize];
            ["Offset of field: StrokeInput::barrel_twist_radians"]
                [::std::mem::offset_of!(StrokeInput, barrel_twist_radians) - 32usize];
        };
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct BrushFamilyHandle {
            pub handle: *mut ::std::os::raw::c_void,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of BrushFamilyHandle"][::std::mem::size_of::<BrushFamilyHandle>() - 8usize];
            ["Alignment of BrushFamilyHandle"]
                [::std::mem::align_of::<BrushFamilyHandle>() - 8usize];
            ["Offset of field: BrushFamilyHandle::handle"]
                [::std::mem::offset_of!(BrushFamilyHandle, handle) - 0usize];
        };
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct BrushHandle {
            pub handle: *mut ::std::os::raw::c_void,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of BrushHandle"][::std::mem::size_of::<BrushHandle>() - 8usize];
            ["Alignment of BrushHandle"][::std::mem::align_of::<BrushHandle>() - 8usize];
            ["Offset of field: BrushHandle::handle"]
                [::std::mem::offset_of!(BrushHandle, handle) - 0usize];
        };
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct StrokeInputBatchHandle {
            pub handle: *mut ::std::os::raw::c_void,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of StrokeInputBatchHandle"]
                [::std::mem::size_of::<StrokeInputBatchHandle>() - 8usize];
            ["Alignment of StrokeInputBatchHandle"]
                [::std::mem::align_of::<StrokeInputBatchHandle>() - 8usize];
            ["Offset of field: StrokeInputBatchHandle::handle"]
                [::std::mem::offset_of!(StrokeInputBatchHandle, handle) - 0usize];
        };
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct InProgressStrokeHandle {
            pub handle: *mut ::std::os::raw::c_void,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of InProgressStrokeHandle"]
                [::std::mem::size_of::<InProgressStrokeHandle>() - 8usize];
            ["Alignment of InProgressStrokeHandle"]
                [::std::mem::align_of::<InProgressStrokeHandle>() - 8usize];
            ["Offset of field: InProgressStrokeHandle::handle"]
                [::std::mem::offset_of!(InProgressStrokeHandle, handle) - 0usize];
        };
        #[repr(C)]
        #[derive(Debug, Copy, Clone)]
        pub struct StrokeHandle {
            pub handle: *mut ::std::os::raw::c_void,
        }
        #[allow(clippy::unnecessary_operation, clippy::identity_op)]
        const _: () = {
            ["Size of StrokeHandle"][::std::mem::size_of::<StrokeHandle>() - 8usize];
            ["Alignment of StrokeHandle"][::std::mem::align_of::<StrokeHandle>() - 8usize];
            ["Offset of field: StrokeHandle::handle"]
                [::std::mem::offset_of!(StrokeHandle, handle) - 0usize];
        };
        unsafe extern "C" {
            pub fn StockBrushMarker(version: i32) -> root::ink_ffi::BrushFamilyHandle;
        }
        unsafe extern "C" {
            pub fn StockBrushPressurePen(version: i32) -> root::ink_ffi::BrushFamilyHandle;
        }
        unsafe extern "C" {
            pub fn StockBrushHighlighter(version: i32) -> root::ink_ffi::BrushFamilyHandle;
        }
        unsafe extern "C" {
            pub fn StockBrushDashedLine(version: i32) -> root::ink_ffi::BrushFamilyHandle;
        }
        unsafe extern "C" {
            pub fn BrushFamilyClone(
                family: root::ink_ffi::BrushFamilyHandle,
            ) -> root::ink_ffi::BrushFamilyHandle;
        }
        unsafe extern "C" {
            pub fn BrushFamilyDestroy(family: root::ink_ffi::BrushFamilyHandle);
        }
        unsafe extern "C" {
            pub fn BrushCreate(
                family: root::ink_ffi::BrushFamilyHandle,
                color: root::ink_ffi::Rgba,
                color_space: root::ink_ffi::ColorSpace,
                color_format: root::ink_ffi::ColorFormat,
                size: f32,
                epsilon: f32,
                out: *mut root::ink_ffi::BrushHandle,
            ) -> root::ink_ffi::StatusCode;
        }
        unsafe extern "C" {
            pub fn BrushClone(brush: root::ink_ffi::BrushHandle) -> root::ink_ffi::BrushHandle;
        }
        unsafe extern "C" {
            pub fn BrushDestroy(brush: root::ink_ffi::BrushHandle);
        }
        unsafe extern "C" {
            pub fn BrushSize(brush: root::ink_ffi::BrushHandle) -> f32;
        }
        unsafe extern "C" {
            pub fn BrushEpsilon(brush: root::ink_ffi::BrushHandle) -> f32;
        }
